# AIEngLiveDummy

ImageSpringAI/: pom.xml
ImageSpringAI/src/main/java/com/telusko/: ImageSpringAiApplication.java
ImageSpringAI/src/main/resources/: application.properties
MCPDemo - CustomeServer/mcpclient/: pom.xml
MCPDemo - CustomeServer/mcpclient/src/main/resources/: application.properties
MCPDemo - CustomeServer/mcpserver/: pom.xml
MCPDemo - CustomeServer/mcpserver/src/main/resources/: application.properties
MCPDemo - FileSystem/: pom.xml
MCPDemo - FileSystem/src/main/java/com/telusko/: MCPDemoApplication.java
MCPDemo - FileSystem/src/main/resources/: application.properties  mcp-servers.json
MCPDemo - FileSystem/src/test/java/com/telusko/: McpclientApplicationTests.java
MCPLangchain/MCPDemo - CustomeServer/: main.py  pyproject.toml
MCPLangchain/MCPDemo - CustomeServer/client/: mcp_client.py
MCPLangchain/MCPDemo - CustomeServer/server/: mcp_server.py
MCPLangchain/MCPDemo - FileSystem/: main.py  pyproject.toml
MariaDBSpringAI/: pom.xml
MariaDBSpringAI/src/main/resources/: application.properties
RAGSpringAI/: pom.xml
RAGSpringAI/src/main/resources/: application.properties
RAGSpringAI/src/main/resources/init/: schema.sql
ToolCallingLangChain/: .env  main.py  pyproject.toml  toolcall_langcahin.py  toolcalling_without_fastapi.py  tools_datetime.py  tools_products.py  tools_wishlist.py  vectorstore.py
ToolCallingLangChain/chroma_db/: chroma.sqlite3
ToolCallingSpringAI/: pom.xml
ToolCallingSpringAI/src/main/resources/: application.properties
(+20 files in other folders)
