[project]
name = "toolcallinglangchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langchain-text-splitters>=1.1.0",
    "langchain-tools>=0.1.34",
    "llm-runner>=0.2.12",
    "tzdata>=2025.3",
    "uvicorn>=0.38.0",
    "vectorstore>=0.0.0",
]
